# early-assembler-prototype

./: .gitignore  CMakeLists.txt  README.md  armv7-arm.c  armv7-arm.h  armv8a-arm.c  armv8a-arm.h  data_section.c  data_section.h  dumbelflib.c  dumbelflib.h  elf.c  linear_data_section.c  main.c  test-armv8-elf.c  test-data-structures.c  test-frames.c
helpers/: memory.c  memory.h  numeric.h
sections/: data.c  data.h  text.c  text.h
